package(default_visibility = ["//visibility:public"])
load(
    "@io_bazel_rules_scala//scala:scala_import.bzl",
    "scala_import",
)

java_library(
    name = "leaf",
    srcs = ["Leaf.java"],
    deps = [":scala_import_transitive"],
)

#failure only on 0.11.1 bazel
java_import(
    name = "scala_import_transitive",
    jars = [],
    deps = [
        ":logback_scala_import",
    ],
)

scala_import(
    name = "logback_scala_import",
    jars = [
        "logback-classic-1.1.11.jar",
    ],
)

#failure on both 0.11.1 bazel and 0.12.0-rc1
java_import(
    name = "java_import_transitive",
    jars = [],
    deps = [":logback_java_import"],
)

java_import(
    name = "logback_java_import",
    jars = [
        "logback-classic-1.1.11.jar",
    ],
)
